--- a/projects/extensions/select/_select-theme.scss
+++ b/projects/extensions/select/_select-theme.scss
@@ -22,18 +22,6 @@
       }
     }
 
-    &.ng-select-opened {
-      .ng-arrow-wrapper {
-        .ng-arrow {
-          border-color: transparent transparent mat-color($foreground, secondary-text);
-
-          .mtx-select-invalid & {
-            border-color: transparent transparent mat-color($warn);
-          }
-        }
-      }
-    }
-
     &.ng-select-disabled {
       .ng-value {
         color: mat-color($foreground, hint-text);
@@ -69,13 +57,25 @@
       }
     }
 
-    .ng-arrow-wrapper {
-      .ng-arrow {
-        border-color: mat-color($foreground, secondary-text) transparent transparent;
+    .ng-arrow-wrapper .ng-arrow {
+      border-color: mat-color($foreground, secondary-text) transparent transparent;
+    }
 
-        .mtx-select-invalid & {
-          border-color: mat-color($warn) transparent transparent;
-        }
+    &.ng-select-invalid {
+      .ng-arrow-wrapper .ng-arrow {
+        border-color: mat-color($warn) transparent transparent;
+      }
+    }
+
+    &.ng-select-opened {
+      .ng-arrow-wrapper .ng-arrow {
+        border-color: transparent transparent mat-color($foreground, secondary-text);
+      }
+    }
+
+    &.ng-select-opened.ng-select-invalid {
+      .ng-arrow-wrapper .ng-arrow {
+        border-color: transparent transparent mat-color($warn);
       }
     }
   }
